--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start":"node app.js",
     "dev":"nodemon app.js"
   },
+  "engines": {
+    "node": "15.3.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
